--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,27 @@
 box-sizing: border-box;
 }
 
-body {
-  background-color: #DADADA;
-  font-family: Roboto;
+@font-face {
+  font-family: system;
+  font-style: normal;
+  font-weight: 400;
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"),
+  local(".LucidaGrandeUI"), local("Ubuntu Light"),
+  local("Segoe UI Light"), local("Roboto-Light"),
+  local("DroidSans"), local("Tahoma");
 }
+
+
+body {
+  background-color: #dadada;
+  overflow: scroll;
+  font-family: "system";
+  font-style: normal;
+}
+
 .container {
   width:375px;
-  height:1004px;
+  height:945px;
   background-color: #ffffff;
   margin: auto;
 }
@@ -21,11 +35,16 @@ status-bar {
 }
 
 .station-title {
+  font-weight: bold;
+  font-size: 30px;
   width:375px;
-  height: 88px;
+  height: 38px;
   text-align:center;
+  padding-top:20px;
   background-color: #FFFFFF;
+  line-height: 35px;
 }
+
 
 nav {
     color:#DADADA;
@@ -34,18 +53,19 @@ nav {
 
 img.back-arrow{
   float: left;
-  padding-left: 10px;
-  padding-top: 58px;
+  padding-left: 15px;
+  padding-top: 17px;
   color: #000000;
 }
 
 h1{
   font-size: 30px;
-  padding-top: 40px;
-  align-items: center;
-  font-weight: bold;
+  font-weight: 600;
   line-height: 35px;
-  padding-left: 10px;
+  text-align:center;
+  box-sizing: border-box;
+  text-align: center;
+  width: 320px;
 }
 
 .Map{
@@ -54,13 +74,13 @@ h1{
   width: 375px;
   height: 401px;
 }
+
   h2{
     font-size: 18px;
     letter-spacing: -0.0241176em;
     line-height: 22px;
-    font-weight: bold;
-    padding-left: 140px;
-    align-items: center;
+    font-weight: 600;
+    text-align: center;
     color: #000000;
     margin-bottom: 0px;
     margin-top: 0px;
@@ -69,6 +89,13 @@ h1{
 .frequency, .singular {
   line-height: 22px;
   background-color: #FFFFFF;
+}
+
+.line {
+  padding-left: 0px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
 }
 
 .arrow-time{
@@ -103,30 +130,28 @@ h1{
   float: right;
   margin-top:6px;
 }
-h3{
-    background-color: #EB5757;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: bold;
-    padding-left: 120px;
-    align-items: center;
-    letter-spacing: -0.0241176em;
-    height:22px;
-    margin-bottom: 0px;
+
+.out-of-service {
+  padding-top: 10px;
+  background-color: #EB5757;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .reroute{
-     background-color: #EB5757;
+    padding-top: 10px;
+    background-color: #EB5757;
+    font-weight: bold;
+    font-size: 18px;
 }
 
-h5{
-    letter-spacing: -0.0241176em;
-    font-weight: bold;
-    padding-left: 140px;
-    align-items: center;
-    color: #000000;
-    margin-bottom: 0px;
+h3{
+    text-align: center;
     font-size: 18px;
-    height: 22px;
-    margin-top: 10px;
-  }
+    line-height: 22px;
+    font-weight: 600;
+    letter-spacing: -0.0241176em;
+    height:22px;
+    padding: 0px;
+
+}
