--- a/css/style.css
+++ b/css/style.css
@@ -4,24 +4,10 @@
 box-sizing: border-box;
 }
 
-@font-face {
-  font-family: system;
-  font-style: normal;
-  font-weight: 400;
-  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"),
-  local(".LucidaGrandeUI"), local("Ubuntu Light"),
-  local("Segoe UI Light"), local("Roboto-Light"),
-  local("DroidSans"), local("Tahoma");
-}
-
-
 body {
-  background-color: #dadada;
-  overflow: scroll;
-  font-family: "system";
-  font-style: normal;
+    font-family: Roboto;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 .container {
   width:374px;
   height:945px;
