--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ h1{
 
 .out-of-service {
   padding-top: 10px;
-  background-color: #EB5757;
+  background-color: #828282;
   font-weight: bold;
   font-size: 18px;
 }
